# gameDevExordium

./: CMakeLists.txt  LICENSE  README.md
src/: ExordiumApplication.cpp  ExordiumApplication.h  Main.cpp
